--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-#服务端口号
+#???????
   port: 8888
 
 eureka:
   instance:
     hostname: localhost
   client:
-#  eureka.client.registerWithEureka：false
-#  fetchRegistry：false来表明自己是一个eureka server.
+#  eureka.client.registerWithEureka??false
+#  fetchRegistry??false??????????????eureka server.
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
